# wandspell

./: .editorconfig  .gitmodules  CMakeLists.txt  READMD.md
cmake/Utils/: cuda_executable.cmake  get_cuda_arch.cmake
src/cuda/: CMakeLists.txt  cuda_device_info.cu  cuda_utils.cuh
tools/: fmt_cpp_srcs.py
